--- a/package.json
+++ b/package.json
@@ -111,10 +111,12 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
     "add-asset-html-webpack-plugin": "3.1.3",
+    "antd-theme-webpack-plugin": "^1.3.7",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-styled-components": "1.10.0",
@@ -123,7 +125,7 @@
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
     "coveralls": "3.0.3",
-    "css-loader": "2.1.1",
+    "css-loader": "^2.1.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
@@ -133,8 +135,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-redux-saga": "1.0.0",
     "eslint-plugin-react-hooks": "1.6.0",
+    "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -143,6 +145,8 @@
     "jest-cli": "24.7.1",
     "jest-dom": "3.1.3",
     "jest-styled-components": "6.3.1",
+    "less": "^3.13.0",
+    "less-loader": "^7.1.0",
     "lint-staged": "8.1.5",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
@@ -156,7 +160,7 @@
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
     "shelljs": "0.8.3",
-    "style-loader": "0.23.1",
+    "style-loader": "^0.23.1",
     "stylelint": "10.0.1",
     "stylelint-config-recommended": "2.2.0",
     "stylelint-config-styled-components": "0.1.1",
