app color and firebase configuration added

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,20 @@
 APP_NAME=app
+APP_COLOR=#5d1049
+
+NODE_ENV=development
+
+REACT_APP_PROD_API_KEY= 
+REACT_APP_PROD_AUTH_DOMAIN= 
+REACT_APP_PROD_DATABASE_URL= 
+REACT_APP_PROD_PROJECT_ID= 
+REACT_APP_PROD_STORAGE_BUCKET= 
+REACT_APP_PROD_MESSAGING_SENDER_ID=
+REACT_APP_PROD_APP_ID=
+
+REACT_APP_DEV_API_KEY= 
+REACT_APP_DEV_AUTH_DOMAIN= 
+REACT_APP_DEV_DATABASE_URL= 
+REACT_APP_DEV_PROJECT_ID=
+REACT_APP_DEV_STORAGE_BUCKET=
+REACT_APP_DEV_MESSAGING_SEND=R_ID=
+REACT_APP_DEV_APP_ID=
