--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
-    "immer": "3.0.0",
+    "immer": "^3.0.0",
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
@@ -91,9 +91,9 @@
     "react-final-form": "^6.5.2",
     "react-helmet": "^6.0.0-beta",
     "react-intl": "2.8.0",
-    "react-redux": "7.0.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.0.0",
-    "redux": "4.0.1",
+    "redux": "^4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
