reset password redirect link added

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
+//all stuff should be without quotes
+
 APP_NAME=app
 APP_COLOR=#5d1049
 
 NODE_ENV=development
 
-REACT_APP_PROD_API_KEY= 
+REACT_APP_PROD_API_KEY=
 REACT_APP_PROD_AUTH_DOMAIN= 
 REACT_APP_PROD_DATABASE_URL= 
 REACT_APP_PROD_PROJECT_ID= 
@@ -18,3 +20,5 @@ REACT_APP_DEV_PROJECT_ID=
 REACT_APP_DEV_STORAGE_BUCKET=
 REACT_APP_DEV_MESSAGING_SEND=R_ID=
 REACT_APP_DEV_APP_ID=
+
+RESET_PASSWORD_REDIRECT_LINK=
